fix(gantt): move tasks to prevent overlapping dependency in RTL

--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -460,7 +460,7 @@
         }
 
         .k-task-wrap {
-            margin: 0 -1.9em;
+            margin: 0 -26px;
         }
         .k-timeline .k-gantt-tasks tbody {
             text-align: left;
